src/objects/OOH_POSDistributorAssociation__c.object
<CustomObject>
    <description>OOH : Used to store M:M relations between Distributor (Account) and POS Outlet</description>
    <fields>
        <fullName>OOH_DistributorAccount__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Distributor Account</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>OOH Distributor</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Point of Sale Outlets</relationshipLabel>
        <relationshipName>POS_Distributor_Associations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OOH_PointOfSaleOutlet__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Point Of Sale Outlet</label>
        <referenceTo>OOH_PointofSaleOutlet__c</referenceTo>
        <relationshipLabel>Distributors</relationshipLabel>
        <relationshipName>POS_Distributor_Associations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OOH_Primary_Distributor__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Primary Distributor</label>
        <type>Checkbox</type>
    </fields>
    <label>POS Distributor Association</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>POSDASC-{0000000}</displayFormat>
        <label>POS Distributor Association Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>POS Distributor Associations</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>